con /pages en lugar de /scrum